feat: header desktop done

--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pet-project</title>
   </head>
-  <body>
+  <body class="text-gray-950 font-montserrat bg-blue-100">
     {{> header}}
-    <p class="bg-red-500 mb-3 max-w-2xs mx-auto mt-5">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p class="bg-green-500 mb-3 max-w-2xs mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p class="bg-yellow-500 mb-3 max-w-2xs mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
