--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body class="text-gray-950 font-montserrat bg-blue-100">
     {{> header}}
+    {{> footer}}
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
