--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="overflow-hidden">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,7 +9,7 @@
   <body class="text-gray-950 font-montserrat bg-blue-100 before:hidden [.overflow-hidden]:before:block before:bg-black/20 before:w-full before:h-[100vh] before:absolute before:top-0 before:left-0 before:z-10 selection:bg-green-400/50">
     {{> header}}
     {{> nav-category}}
-    {{> baner}}
+    {{> banner}}
     {{> footer}}
     <script type="module" src="/src/main.js"></script>
   </body>
