--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body class="text-gray-950 font-montserrat bg-blue-100 before:hidden [.overflow-hidden]:before:block before:bg-black/20 before:w-full before:h-[100vh] before:absolute before:top-0 before:left-0 before:z-10 selection:bg-green-400/50">
     {{> header}}
     {{> nav-category}}
-    {{> banner}}
+    <main>
+      {{> banner}}
+      {{> feedback}}
+    </main>
     {{> footer}}
     <script type="module" src="/src/main.js"></script>
   </body>
