--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     {{> nav-category}}
     <main>
       {{> banner}}
+      {{> advantages}}
       {{> feedback}}
     </main>
     {{> footer}}
