feat: mobile-screen info

--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
     {{> nav-category}}
     {{> baner-info}}
     {{> history-info}}
-    <img src="./assets/img/team.png" alt="team" class="mx-auto w-full">
+    <img src="./assets/img/team.png" alt="team" class="ml-auto mr-auto w-full mt-10.75 md:mt-12 xl:mt-0">
     {{> social-info}}
     <main>
     </main>
