--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       {{> banner}}
       {{> advantages}}
       {{> programs}}
+      {{> accordion}}
       {{> feedback}}
     </main>
     {{> footer}}
