feate: accordion-info

--- a/info.html
+++ b/info.html
@@ -12,8 +12,12 @@
     {{> baner-info}}
     {{> feedback}}
     {{> history-info}}
-    <img src="./assets/img/team.png" alt="team" class="ml-auto mr-auto w-full mt-10.75 md:mt-12 xl:mt-0">
+    <img src="./assets/img/team.png" alt="team" class="ml-auto mr-auto w-full mt-10.75 md:mt-12 xl:mt-0 xl:max-w-480">
     {{> social-info}}
+    {{> accordion}}
+    <br>
+    <br>
+    <br>
     <main>
     </main>
     {{> footer}}
