feat: desctop and mobile accordion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       {{> banner}}
       {{> feedback}}
       {{> advantages}}
-      {{> programs}}
+      <!-- {{> programs}} -->
       {{> accordion}}
       <br>
       <br>
